# tinygb

./: CMakeLists.txt
src/core/: cpu.c  display.c  sgb.c
src/include/: tinygb.h
src/platform/fenster/: log.c  main.c
src/platform/sdl/: main.c
